--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,6 @@
 	<!-- Map all the URLs to the Jersey ServletContainer -->
 	<servlet-mapping>
 		<servlet-name>WebService</servlet-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
 </web-app>
